--- a/lesson01/styles/holygrail.css
+++ b/lesson01/styles/holygrail.css
@@ -1,8 +1,8 @@
-/* Delete everything and rewrite it to figure out what it does */
 body {
     display: grid;
     height: 100vh;
     grid-template: auto 1fr auto / 300px 1fr auto;
+    font-weight: bold;
 }
 
 header {
@@ -11,15 +11,9 @@ header {
     grid-column: 1 / 4;
 }
 
-
-.left-sidebar {
-    background: lightblue;
-    grid-column: 1 / 2;
-}
-
 main {
     background: coral;
-    grid-column: 2 / 3;
+    grid-column: 1/3;
 }
 
 .right-sidebar {
@@ -34,7 +28,7 @@ footer {
     grid-column: 1 / 4;
 }
 
-.left-sidebar,
+.main,
 .right-sidebar {
     padding: 1rem;
 }
