unfinished Web Design Principles

--- a/lesson02/styles/base.css
+++ b/lesson02/styles/base.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Handlee&family=Nanum+Myeongjo&family=Playpen+Sans:wght@300&family=Silkscreen&family=Tektur&display=swap');
 
+
+/* Colors
+for rare occational text: #ffaff0 //light purple
+ */
 * {
     box-sizing: border-box;
 }
