updated validator and course home page

--- a/lesson02/styles/media-query-large.css
+++ b/lesson02/styles/media-query-large.css
@@ -6,9 +6,11 @@
     }
 
     main{
-        grid-template-columns: 1fr 1fr;
+        /* grid-template-columns: 1fr 1fr; */
         display: grid;
         grid-template-columns: 2fr 1fr;
     }  
+
+    
 
 }
