--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,4 +1,8 @@
 @media screen and (min-width: 800px){
+    
+    nav{
+        padding: 8px 5px .3px 5px;
+    }
     nav ul{
         display: flex;
         flex-direction: row;
@@ -8,5 +12,8 @@
     #cards{
         display: grid;
         grid-template-columns: 2fr 1fr;
+        padding:4px;
     }
+
+
 }
