--- a/lesson02/styles/design.css
+++ b/lesson02/styles/design.css
@@ -34,8 +34,7 @@ h1 {
 main {
     
 	display: grid;
-    /* grid-column: 1/2; */
-    grid-template-columns:  1fr 200px;
+    /* grid-template-columns:  2fr 1fr; */
     
    
 }
@@ -45,7 +44,9 @@ section{
 
 h2 {
 	color: navy;
-	text-align: left;
+	text-align:left;
+	grid-column: 1/3;
+	
 }
 
 article p {
