--- a/lesson02/styles/media-query-large.css
+++ b/lesson02/styles/media-query-large.css
@@ -6,9 +6,10 @@
     }
 
     main{
-        /* grid-template-columns: 1fr 1fr; */
         display: grid;
-        grid-template-columns: 2fr 1fr;
+        grid-template-columns: 1fr 1fr;
+        padding:4px;
     }    
 
+  
 }
