--- a/styles/larger.css
+++ b/styles/larger.css
@@ -2,6 +2,10 @@
     
     nav{
         padding: 8px 5px .3px 5px;
+        grid-column:span;
+    }
+    nav a:hover{
+        color:#f028f0;
     }
     nav ul{
         display: flex;
