--- a/styles/base.css
+++ b/styles/base.css
@@ -54,7 +54,8 @@ nav a{
 }
 
 nav a:hover{
-    color:#f028f0;
+    color:#8B008B;
+    /* #f028f0 */
 }
 
 nav li{
@@ -69,7 +70,7 @@ body {
 }
 
 section{
-   margin: 4rem;  /* this gave the cards spacing between each other */
+   margin: 1rem;  /* this gave the cards spacing between each other */
 }
 
 .card {
@@ -78,7 +79,6 @@ section{
     border-radius: .4rem; /*seems to control the curve of the border*/
     /* width: 100%;  this made the cards stack besides each other*/
     padding: 35px;
-    /* margin: 1em ; */
 }
 
 .card a:hover{
