--- a/styles/larger.css
+++ b/styles/larger.css
@@ -4,6 +4,10 @@
         padding: 8px 5px .3px 5px;
         grid-column:span;
     }
+
+    nav ul.open{
+        flex-direction:row;
+    }
     nav ul{
         display: flex;
         flex-direction: row;
@@ -15,6 +19,9 @@
         grid-template-columns: 2fr 1fr;
         padding:4px;
     }
-
-
+    /* fix this */
+    #menu-button{
+        display:none;
+    }
 }
+
