--- a/styles/larger.css
+++ b/styles/larger.css
@@ -14,6 +14,16 @@
         justify-content: space-around;
     }
 
+    /* /* .google-maps{
+       padding-bottom: 50%; 
+       position:relative;  
+    }  
+
+    .google-maps{
+        width: 600;
+        height:500;
+    } */
+
     #cards{
         display: grid;
         grid-template-columns: 2fr 1fr;
@@ -21,7 +31,7 @@
     }
     /* fix this */
     #menu-button{
-        display:none;
+        display: none;
     }
-}
+} 
 
