--- a/styles/larger.css
+++ b/styles/larger.css
@@ -14,7 +14,7 @@
         justify-content: space-around;
     }
 
-    /* /* .google-maps{
+    /*.google-maps{
        padding-bottom: 50%; 
        position:relative;  
     }  
