--- a/styles/base.css
+++ b/styles/base.css
@@ -135,17 +135,23 @@ body {
 
 }
 
- /* .google-maps{
-    padding-bottom: 50%;
+.google-maps{
     position:relative;  
+    padding-bottom: 50px;
+    padding:1rem;
+    width: 100%;
+    /* height: 100%; */
+    
+    top:60%;
+    
 }
 
- .google-maps iframe{
+/* .google-maps iframe{
     height: 100%;
-    width: 100%;
-    left: 0px;  
-    top: 5px;
-    position: absolute; this makes maps disappear when set to absolut 
+    width:100% ;
+    left: 0%;  
+    top: 0%;
+    position: absolute;  /*this makes maps disappear when set to absolut  
 
 }   */
 
