--- a/lesson03/styles/chamber-base.css
+++ b/lesson03/styles/chamber-base.css
@@ -49,6 +49,7 @@ main {
 
 main ul{
     list-style-type: none; 
+    
 }
 
 nav{
@@ -133,6 +134,7 @@ img{
 
 h1{
     color:var(--primary-color);
+
 }
 .card {
     border-style: solid; /*shows that we want a border with this style */
@@ -141,8 +143,13 @@ h1{
     /* width: 100%;  this made the cards stack besides each other*/
     padding: 35px;
     margin: 1rem;  /* this gave the cards spacing between each other */   
+
 }
 
+/* PLAY AROUND WITH THIS */
+.card ul li{
+    font-weight:900px;/* change font weight of text */
+}
 
 .card a:hover{
     color:var(--primary-color); 
