--- a/lesson03/styles/chamber-base.css
+++ b/lesson03/styles/chamber-base.css
@@ -5,25 +5,27 @@
 * {
     font-family: 'Averia-Serif-Libre','san-serif';
     box-sizing: border-box;
-    --background-color: navy;
-    --primary-color:white;
-    --dark-blue:#32343e;
+    --background-color: #32343e;
+    --primary-color:white;;
     --grey-blue:#404c54;
     --blue-enough:#446b6a;
     --almost-teal:#478d73;
     --sea-green:#5ba95d;
     
 }
-
+                             /* Stuff that applies everywhere */
 ::selection {
     color: var(--primary-color);
     background-color: var(--background-color);
 }
     
+                                /* Header */
 header{
     background-color:var(--background-color);
     display:grid;
     grid-column:2/4 ;
+    text-align:center;
+    
 }
 
 header img{
@@ -52,13 +54,13 @@ main ul{
     
 }
 
+                                        /* Navigation */
 nav{
     background-color: var(--background-color);
     color: var(--primary-color);
     grid-column:span;
     text-align: center;
 }
-
 
 #menu-button{
     background-color:var(--background-color);
@@ -79,9 +81,10 @@ nav{
 nav ul{ 
     list-style:none; /*what does this do?*/
     text-align: center;
-    background-color: var(--background-color);
+    background-color: var(--sea-green);
     padding-inline-start: 0px; /*what does this do?*/
     display:none; 
+    font-size:20px;
 }
 
 nav ul.open{
@@ -105,20 +108,23 @@ nav ul li a{
 nav a{
     color: var(--primary-color);
     text-align: center;
+    font-size: large;
     
 }
 
 nav ul li a:hover{
-    color:var(--background-color);
-    background-color: white;
+    color:var(--grey-blue);
+    background-color: var(--sea-green);
     font-weight: bold;  /* makes the text appear thicker/bolded when hovered */
-    /* #f028f0 */
+    
 }
 
 nav li{
     list-style-type: none; /*this makes the dots besides the link disapear */
 }
 
+
+                    /* Stuff After Navigator [Stuff within body] */
 body {
     font-size:20px;
     color:var(--background-color);
@@ -136,7 +142,11 @@ h1{
     color:var(--primary-color);
 
 }
+
+
+                                /* Section .card */
 .card {
+    font-size: 25px;
     border-style: solid; /*shows that we want a border with this style */
     border-width: 3.8px; /* width of the border*/
     border-radius: .4rem; /*seems to control the curve of the border*/
@@ -146,8 +156,7 @@ h1{
 
 }
 
-/* PLAY AROUND WITH THIS */
-.card ul li{
+.card ul li{           /* PLAY AROUND WITH THIS */
     font-weight:900px;/* change font weight of text */
 }
 
@@ -156,15 +165,51 @@ h1{
 
 }
 
+
+/* Colors in Color Schema */
+.colors {
+    width: 100%;
+    min-width: 350px;
+    margin: auto;
+    text-align: center;
+}
+.colors th {
+    background-color: #999;
+}
+.colors td{
+    width: 25%;
+    height: 3em;
+}
+
+.background-color{
+    background-color: var(--background-color);
+}
+.primary-color{
+    background-color:var(--primary-color);
+}
+.grey-blue{
+    background-color:var(--grey-blue)
+}
+.blue-enough{
+    background-color: var(--blue-enough);
+}
+.almost-teal{
+    background-color:var(--almost-teal)
+}
+.sea-green{
+    background-color:var(--sea-green)
+}
+
+
+
+/* Google Maps  */
 .google-maps{
     position:relative;  
     padding-bottom: 50px;
     padding:1rem;
     width: 100%;
     /* height: 100%; */
-    
     top:60%;
-    
 }
 
 /* .google-maps iframe{
@@ -176,6 +221,9 @@ h1{
 
 }   */
 
+
+
+/* Footer */
 footer{
     background-color:var(--background-color);
     padding: 45px;
