--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -31,7 +31,7 @@ header{
 header img{
     border-radius:100px;  /* this changes the shape of the image */
     padding: 15px; /*  gives spacing but shortens image */
-    width:100px; /*changes width of image*/
+    width:175px; /*changes width of image*/
 }
 
 
@@ -147,8 +147,8 @@ nav li{
                     /* Stuff After Navigator [Stuff within body] */
 body {
     font-size:20px;
-    color:var(--background-color);
-    background-color:var(--primary-color);
+    color:var(--primary-color);
+    background-color:var(--background-color);
 }
 
 img{
@@ -158,8 +158,9 @@ img{
 
 }
 
+
 h1{
-    color:var(--primary-color);
+    color:var(--background-color);
 
 }
 
@@ -178,7 +179,7 @@ h1{
     color:var(--primary-color); 
 }
 
-/* Google Maps  */
+                                /* Google Maps  */
 .google-maps{
     position:relative;  
     padding-bottom: 50px;
@@ -197,11 +198,18 @@ h1{
 
 }*/
 
-/* Footer */
+                                        /* Footer */
 footer{
     background-color:var(--background-color);
     padding: 45px;
     color: var(--primary-color);
     text-align: center;
     
+}
+
+footer img{
+    float:left;
+    /* border-radius:100px;  this changes the shape of the image */
+    padding: 15px; /* gives spacing but shortens image */
+    width:150px; /*changes width of image*/
 }
