--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,9 +1,8 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 * {
-    font-family: 'Averia-Serif-Libre','san-serif';
+    font-family: 'Roboto';
     box-sizing: border-box;
     --background-color: #32343e; 
     --primary-color:white;;
