--- a/lesson09/styles/prophets.css
+++ b/lesson09/styles/prophets.css
@@ -1,5 +1,19 @@
 #cards{
     display: grid;
+    color: #000000;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+}
+
+#cards section{
+    border-style: solid; 
+    border-width: 3.8px; 
+    border-radius: 5rem;
+    padding: 50px;
+    margin: 1rem;    
+}
+
+footer{
+    font-size: 15px;
+    text-align: center;
 }
 
