--- a/lesson09/styles/prophets.css
+++ b/lesson09/styles/prophets.css
@@ -1,3 +1,8 @@
+header{
+    text-align: center;
+    color: #000000;
+}
+
 #cards{
     display: grid;
     color: #000000;
@@ -10,8 +15,7 @@
     padding: 35px;
     border-style: solid; 
     border-width: 3.8px; 
-    border-radius: 5rem;
-    
+    border-radius: 5rem; 
 }
 
 footer{
