--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -184,7 +184,48 @@ section a:hover{
 
 } 
 
-                                /* Google Maps  */
+                                    /*  */
+header{
+    text-align: center;
+    color: #000000;
+}
+
+#cards{
+    display: grid;
+    color: #000000;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+}
+
+#cards section{
+    max-width: fit-content;
+    margin: .6rem;
+    padding: 35px;
+    border-style: solid; 
+    border-width: 3.8px; 
+    border-radius: 5rem; 
+}
+
+footer{
+    font-size: 15px;
+    text-align: center;
+}
+
+                /* INSERT ANY CODE FOR the business page (directory.html) */
+
+
+
+
+
+                /* END FOR BUSINESS PAGE (directory.html) */
+#cards section{
+    max-width: fit-content;
+    margin: .6rem;
+    padding: 35px;
+    border-style: solid; 
+    border-width: 3.8px; 
+    border-radius: 5rem; 
+}
+                            /* Google Maps  */
 .google-maps{
     position:relative;  
     /* padding-bottom: 50px; */
