--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -195,14 +195,14 @@ header{
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 }
 
-#cards section{
-    /* max-width: fit-content;
+/*#cards section{
+     max-width: fit-content;
     margin: .6rem;
     padding: 35px;
     border-style: solid; 
     border-width: 3.8px; 
-    border-radius: 5rem;  */
-}
+    border-radius: 5rem;  
+}*/
 
 footer{
     font-size: 15px;
@@ -211,7 +211,7 @@ footer{
 
                 /* INSERT ANY CODE FOR the business page (directory.html) */
 .business_main{
-   background-color: #478d73;
+   /* background-color: #478d73;   this was to see if main was connectign*/
    margin: auto;
     
 }
@@ -221,16 +221,89 @@ footer{
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 }
        
-#business_cards section{
+#business_cards section {
 
     border-style: solid;
     border-width: 3px;
     border-radius: 5rem;
     padding: 20px; 
-    margin: 10px;
+    margin: 10p
 }
 
+                     /* /* START OF FORM CSS    */
+
+.join{
+
+    display: grid;    
+    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+ }
+
+
+
+.join > div{
+    margin: 5rem;
+    padding: 1rem;
+    border: 1px black solid;
+    border-radius: 5px;  
+    width: 90%;
+    min-width: 400px;}
+
+
+
+label.myinput{
+    display:block;
+    padding-top: 1rem;}
+
+label.myinput input, label.myinput textarea{
+    display:block;
+    font-size: 1.2rem;
+    padding: .5rem;
+    width: 20rem;
+    max-width: 20rem;}
+
+label.myradio{
+    display: block;
+    margin-right: .2rem;
+    font-size: 1.3rem;  
+    padding-top: .5rem; }
+
+label.myradio input{
+  margin-right: 1rem;}
+
+.mysubmit{
+    background-color: var(--blue-enough);
+    color: white;
+    margin: 1rem 0 0 0;
+    padding: .5rem;
+    font-size: 1.5rem;
+    }
+
+    label.myinput input:required{
+  border-color: #922;
+  }
+
+    input:valid{
+  background-color: rgb(200, 255, 200);
+  }
+
+    input:invalid{
+  background-color: rgb(255, 200, 200);
+  }
+
+    .join-confirm{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+    text-align: center;
+    }
+
+    #thankyou-main h2{
+  text-align: center;
+  margin-block-start: 0;
+    margin-block-end: 0;
+    padding: 1rem 0; }
+
                 /* END FOR BUSINESS PAGE (directory.html) */
+
 #cards section{
     max-width: fit-content;
     margin: .6rem;
